tests/transpiler/x/hs/in_operator_extended.error
run: exit status 1

/workspace/mochi/tests/transpiler/x/hs/in_operator_extended.hs:7:20: error:
    Variable not in scope: a
  |
7 | m = Map.fromList [(a, 1)]
  |                    ^

/workspace/mochi/tests/transpiler/x/hs/in_operator_extended.hs:19:28: error:
    • Couldn't match expected type: [Char]
                  with actual type: Map.Map k0 a0
    • In the second argument of ‘isInfixOf’, namely ‘m’
      In the first argument of ‘print’, namely ‘("a" `isInfixOf` m)’
      In a stmt of a 'do' block: print ("a" `isInfixOf` m)
   |
19 |     print ("a" `isInfixOf` m)
   |                            ^

/workspace/mochi/tests/transpiler/x/hs/in_operator_extended.hs:20:28: error:
    • Couldn't match expected type: [Char]
                  with actual type: Map.Map k1 a1
    • In the second argument of ‘isInfixOf’, namely ‘m’
      In the first argument of ‘print’, namely ‘("b" `isInfixOf` m)’
      In a stmt of a 'do' block: print ("b" `isInfixOf` m)
   |
20 |     print ("b" `isInfixOf` m)
   |                            ^
