tests/transpiler/x/hs/in_operator_extended.hs
{-# LANGUAGE DuplicateRecordFields #-}
{-# LANGUAGE OverloadedRecordDot #-}
{-# LANGUAGE NoFieldSelectors #-}
-- Generated by Mochi transpiler v0.10.33 on 2025-07-21 18:46 GMT+7
import Data.List (intercalate, isInfixOf, union, intersect, nub, sortOn, (\\))
import qualified Data.Map as Map
m = Map.fromList [(a, 1)]

s = "hello"

xs = [1, 2, 3]

ys = [x | x <- xs, x `mod` 2 == 1]

main :: IO ()
main = do
    print (1 `elem` ys)
    print (2 `elem` ys)
    print ("a" `isInfixOf` m)
    print ("b" `isInfixOf` m)
    print ("ell" `isInfixOf` s)
    print ("foo" `isInfixOf` s)
